--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@ body {
     scroll-behavior: smooth;
 }
 
+img {
+    height: 40px;
+    width: 40px;
+    border-radius: 20px;
+}
+
 /* Terminal Container */
 .terminal-container {
     max-width: 1200px;
